Update similarity script to compute related reports

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b7dc924e-d3c5-48b9-be3c-083ccda549cf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "94bd6c3b-291d-45e9-aa1a-edf965b8f895",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "85dcb0ba-8e8d-4161-9413-1a74eca01be3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
     "            (report_id, publish_time, title, summary, upload_time,\n",
     "             source, ipv4s, ipv6s, urls, yara_rules, cves,\n",
     "             sha256s, md5s, sha1s, mitre, report_type,\n",
-    "             web_url, report_data_url) = row\n",
+    "             web_url, report_data_url, invalid_iocs, irrelevant_iocs, related_report_ids) = row\n",
     "\n",
     "            pg_row = {\n",
     "                \"id\": report_id,\n",
@@ -92,6 +92,9 @@
     "                \"report_type\": report_type,\n",
     "                \"web_url\": web_url,\n",
     "                \"report_data_url\": report_data_url,\n",
+    "                \"invalid_iocs\": invalid_iocs,\n",
+    "                \"irrelevant_iocs\": irrelevant_iocs,\n",
+    "                \"related_report_ids\": split(related_report_ids),\n",
     "            }\n",
     "            pg_cur.execute(\"\"\"\n",
     "                INSERT INTO report VALUES (\n",
@@ -112,7 +115,10 @@
     "                    %(mitre)s,\n",
     "                    %(report_type)s,\n",
     "                    %(web_url)s,\n",
-    "                    %(report_data_url)s\n",
+    "                    %(report_data_url)s,\n",
+    "                    %(invalid_iocs)s,\n",
+    "                    %(irrelevant_iocs)s,\n",
+    "                    %(related_report_ids)s\n",
     "                );\n",
     "            \"\"\", pg_row)\n",
     "\n",
@@ -126,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0a6422d6-c6dd-4c96-8713-e2d57ae1346c",
    "metadata": {},
    "outputs": [
