Add initial script to enrich reports

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "85dcb0ba-8e8d-4161-9413-1a74eca01be3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "             source, ipv4s, ipv6s, urls, yara_rules, cves,\n",
     "             sha256s, md5s, sha1s, mitre, report_type,\n",
     "             web_url, report_data_url, invalid_iocs, irrelevant_iocs, related_report_ids) = row\n",
-    "\n",
+    "            \n",
     "            pg_row = {\n",
     "                \"id\": report_id,\n",
     "                \"publish_time\": publish_time,\n",
@@ -92,35 +92,38 @@
     "                \"report_type\": report_type,\n",
     "                \"web_url\": web_url,\n",
     "                \"report_data_url\": report_data_url,\n",
-    "                \"invalid_iocs\": invalid_iocs,\n",
-    "                \"irrelevant_iocs\": irrelevant_iocs,\n",
+    "                \"invalid_iocs\": json.dumps({}) if invalid_iocs == \"\" else invalid_iocs,\n",
+    "                \"irrelevant_iocs\": json.dumps({}) if irrelevant_iocs == \"\" else irrelevant_iocs,\n",
     "                \"related_report_ids\": split(related_report_ids),\n",
     "            }\n",
-    "            pg_cur.execute(\"\"\"\n",
-    "                INSERT INTO report VALUES (\n",
-    "                    %(id)s,\n",
-    "                    to_timestamp(%(publish_time)s),\n",
-    "                    %(title)s,\n",
-    "                    %(summary)s,\n",
-    "                    to_timestamp(%(upload_time)s),\n",
-    "                    %(source)s,\n",
-    "                    %(ipv4s)s,\n",
-    "                    %(ipv6s)s,\n",
-    "                    %(urls)s,\n",
-    "                    %(yara_rules)s,\n",
-    "                    %(cves)s,\n",
-    "                    %(sha256s)s,\n",
-    "                    %(md5s)s,\n",
-    "                    %(sha1s)s,\n",
-    "                    %(mitre)s,\n",
-    "                    %(report_type)s,\n",
-    "                    %(web_url)s,\n",
-    "                    %(report_data_url)s,\n",
-    "                    %(invalid_iocs)s,\n",
-    "                    %(irrelevant_iocs)s,\n",
-    "                    %(related_report_ids)s\n",
-    "                );\n",
-    "            \"\"\", pg_row)\n",
+    "            try:\n",
+    "                pg_cur.execute(\"\"\"\n",
+    "                    INSERT INTO report VALUES (\n",
+    "                        %(id)s,\n",
+    "                        to_timestamp(%(publish_time)s),\n",
+    "                        %(title)s,\n",
+    "                        %(summary)s,\n",
+    "                        to_timestamp(%(upload_time)s),\n",
+    "                        %(source)s,\n",
+    "                        %(ipv4s)s,\n",
+    "                        %(ipv6s)s,\n",
+    "                        %(urls)s,\n",
+    "                        %(yara_rules)s,\n",
+    "                        %(cves)s,\n",
+    "                        %(sha256s)s,\n",
+    "                        %(md5s)s,\n",
+    "                        %(sha1s)s,\n",
+    "                        %(mitre)s,\n",
+    "                        %(report_type)s,\n",
+    "                        %(web_url)s,\n",
+    "                        %(report_data_url)s,\n",
+    "                        %(invalid_iocs)s,\n",
+    "                        %(irrelevant_iocs)s,\n",
+    "                        %(related_report_ids)s\n",
+    "                    );\n",
+    "                \"\"\", pg_row)\n",
+    "            except Exception as e:\n",
+    "                raise Exception(f\"error inserting {report_id}: {e}\")\n",
     "\n",
     "            count += 1\n",
     "\n",
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "0a6422d6-c6dd-4c96-8713-e2d57ae1346c",
    "metadata": {},
    "outputs": [
@@ -140,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied 305 rows\n"
+      "Copied 336 rows\n"
      ]
     }
    ],
