--- a/threat_report_parsing.ipynb
+++ b/threat_report_parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "7e69a932-fe06-468f-be55-3b9a2b0b268f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "89b2d1c6-dcda-495f-846b-6f048fda6c82",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "5cdbd990-8591-4acd-b7aa-848e86d6d2cd",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "5c1b8268-d7e8-4ddd-abdc-6e40bde46806",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "3d4ad9fc-2c11-4a60-a4d9-290fa949e134",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "68b68f92-f4d3-4922-bd70-6a779f3bf5f6",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "b6c167fb-55f8-4da6-a54d-64065c6c713a",
    "metadata": {},
    "outputs": [],
@@ -256,6 +256,9 @@
     "        \"report_type\": r.report_type.name,\n",
     "        \"web_url\": r.url,\n",
     "        \"report_data_url\": report_data_url,\n",
+    "        \"ai_invalid_iocs\": json.dumps({}),\n",
+    "        \"ai_irrelevant_iocs\": json.dumps({}),\n",
+    "        \"related_report_ids\": \"\",\n",
     "    }\n",
     "\n",
     "    try:\n",
@@ -279,7 +282,10 @@
     "                    :mitre,\n",
     "                    :report_type,\n",
     "                    :web_url,\n",
-    "                    :report_data_url\n",
+    "                    :report_data_url,\n",
+    "                    :ai_invalid_iocs,\n",
+    "                    :ai_irrelevant_iocs,\n",
+    "                    :related_report_ids\n",
     "                )\n",
     "            \"\"\", data)\n",
     "    except Exception as e:\n",
@@ -289,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "41a3b524-b3a6-4b2d-9bc6-dae222946aef",
    "metadata": {},
    "outputs": [],
@@ -300,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "275c44d3-baf7-420e-9e91-ab6f3c9ab171",
    "metadata": {},
    "outputs": [],
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "ae0bd4ed-7315-49f0-898d-9a127db93437",
    "metadata": {},
    "outputs": [],
@@ -385,7 +391,7 @@
     "                    print(f\"BOZO {line}: {feed.bozo_exception}\")\n",
     "                    continue\n",
     "                \n",
-    "                process_feed(feed, conn, ixwriter, skip_existing=False)\n",
+    "                process_feed(feed, conn, ixwriter, skip_existing=True)\n",
     "                print(f\"Processed feed {line}\")\n",
     "    finally:\n",
     "        ixwriter.commit()\n",
@@ -394,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "6c9f81b9-1a0c-47dc-b4bb-282552f51a0a",
    "metadata": {},
    "outputs": [
@@ -403,52 +409,49 @@
      "output_type": "stream",
      "text": [
       "********** Reading 100 posts from WeLiveSecurity **********\n",
-      "********** Persisted 100 / 100 posts from WeLiveSecurity **********\n",
+      "********** Persisted 0 / 100 posts from WeLiveSecurity **********\n",
       "Processed feed https://www.welivesecurity.com/en/rss/feed/\n",
-      "********** Reading 16 posts from abuse.ch | IT-Security Blog **********\n",
-      "********** Persisted 16 / 16 posts from abuse.ch | IT-Security Blog **********\n",
+      "********** Reading 17 posts from abuse.ch | IT-Security Blog **********\n",
+      "********** Persisted 1 / 17 posts from abuse.ch | IT-Security Blog **********\n",
       "Processed feed https://abuse.ch/rss\n",
       "********** Reading 15 posts from Check Point Research **********\n",
-      "********** Persisted 15 / 15 posts from Check Point Research **********\n",
+      "********** Persisted 0 / 15 posts from Check Point Research **********\n",
       "Processed feed https://research.checkpoint.com/feed/\n",
       "********** Reading 10 posts from Sophos News **********\n",
-      "********** Persisted 10 / 10 posts from Sophos News **********\n",
+      "********** Persisted 2 / 10 posts from Sophos News **********\n",
       "Processed feed https://news.sophos.com/en-us/feed/\n",
       "********** Reading 10 posts from SentinelOne **********\n",
-      "********** Persisted 10 / 10 posts from SentinelOne **********\n",
+      "********** Persisted 0 / 10 posts from SentinelOne **********\n",
       "Processed feed https://www.sentinelone.com/feed/\n",
       "********** Reading 15 posts from Unit 42 **********\n",
-      "********** Persisted 15 / 15 posts from Unit 42 **********\n",
+      "********** Persisted 0 / 15 posts from Unit 42 **********\n",
       "Processed feed https://unit42.paloaltonetworks.com/feed/\n",
       "********** Reading 10 posts from Blog **********\n",
-      "********** Persisted 10 / 10 posts from Blog **********\n",
+      "********** Persisted 2 / 10 posts from Blog **********\n",
       "Processed feed https://www.crowdstrike.com/en-us/blog/feed\n",
       "********** Reading 10 posts from CISA Blog **********\n",
-      "Error reading https://www.cisa.gov/news-events/news/safecom-publishes-spring-2024-safecom-bi-annual-meeting-executive-summary, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "********** Persisted 9 / 10 posts from CISA Blog **********\n",
+      "********** Persisted 1 / 10 posts from CISA Blog **********\n",
       "Processed feed https://www.cisa.gov/blog.xml\n",
       "********** Reading 10 posts from CISA News **********\n",
-      "********** Persisted 10 / 10 posts from CISA News **********\n",
+      "********** Persisted 1 / 10 posts from CISA News **********\n",
       "Processed feed https://www.cisa.gov/news.xml\n",
       "********** Reading 30 posts from All CISA Advisories **********\n",
-      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-063-04, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "Error reading https://www.cisa.gov/news-events/ics-advisories/icsa-25-051-01, skipping: HTTPSConnectionPool(host='www.cisa.gov', port=443): Read timed out. (read timeout=10)\n",
-      "********** Persisted 28 / 30 posts from All CISA Advisories **********\n",
+      "********** Persisted 13 / 30 posts from All CISA Advisories **********\n",
       "Processed feed https://www.cisa.gov/cybersecurity-advisories/all.xml\n",
       "********** Reading 15 posts from Cisco Talos Blog **********\n",
-      "********** Persisted 15 / 15 posts from Cisco Talos Blog **********\n",
+      "********** Persisted 1 / 15 posts from Cisco Talos Blog **********\n",
       "Processed feed https://blog.talosintelligence.com/rss/\n",
       "********** Reading 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
-      "********** Persisted 11 / 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
+      "********** Persisted 6 / 11 posts from SANS Internet Storm Center, InfoCON: green **********\n",
       "Processed feed https://isc.sans.edu/rssfeed_full.xml\n",
       "********** Reading 10 posts from Microsoft Security Blog **********\n",
-      "********** Persisted 10 / 10 posts from Microsoft Security Blog **********\n",
+      "********** Persisted 1 / 10 posts from Microsoft Security Blog **********\n",
       "Processed feed https://www.microsoft.com/en-us/security/blog/feed/\n",
       "********** Reading 20 posts from Threat Intelligence **********\n",
-      "********** Persisted 20 / 20 posts from Threat Intelligence **********\n",
+      "********** Persisted 1 / 20 posts from Threat Intelligence **********\n",
       "Processed feed https://feeds.feedburner.com/threatintelligence/pvexyqv7v0v\n",
       "********** Reading 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
-      "********** Persisted 30 / 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
+      "********** Persisted 9 / 30 posts from Subscribe to Security Magazine's RSS Feed **********\n",
       "Processed feed https://www.securitymagazine.com/rss/15\n"
      ]
     }
