--- a/similarity.ipynb
+++ b/similarity.ipynb
@@ -146,13 +146,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computed similarities for 305 rows\n"
+      "Indexing documents for SentinelOne\n",
+      "Finished indexing documents for SentinelOne. Total 1949 documents\n",
+      "Indexing documents for Check Point Research\n",
+      "Finished indexing documents for Check Point Research. Total 1949 documents\n",
+      "Indexing documents for Subscribe to Security Magazine's RSS Feed\n",
+      "Finished indexing documents for Subscribe to Security Magazine's RSS Feed. Total 2087 documents\n",
+      "Indexing documents for Microsoft Security Blog\n",
+      "Finished indexing documents for Microsoft Security Blog. Total 2101 documents\n",
+      "Indexing documents for abuse.ch | IT-Security Blog\n",
+      "Finished indexing documents for abuse.ch | IT-Security Blog. Total 2102 documents\n",
+      "Indexing documents for All CISA Advisories\n",
+      "Finished indexing documents for All CISA Advisories. Total 2148 documents\n",
+      "Indexing documents for Unit 42\n",
+      "Finished indexing documents for Unit 42. Total 2148 documents\n",
+      "Indexing documents for Blog\n",
+      "Finished indexing documents for Blog. Total 2171 documents\n",
+      "Indexing documents for WeLiveSecurity\n",
+      "Finished indexing documents for WeLiveSecurity. Total 2171 documents\n",
+      "Indexing documents for Cisco Talos Blog\n",
+      "Finished indexing documents for Cisco Talos Blog. Total 2180 documents\n",
+      "Indexing documents for Threat Intelligence\n",
+      "Finished indexing documents for Threat Intelligence. Total 2182 documents\n",
+      "Indexing documents for CISA News\n",
+      "Finished indexing documents for CISA News. Total 2183 documents\n",
+      "Indexing documents for CISA Blog\n",
+      "Finished indexing documents for CISA Blog. Total 2184 documents\n",
+      "Indexing documents for Sophos News\n",
+      "Finished indexing documents for Sophos News. Total 2188 documents\n",
+      "Indexing documents for SANS Internet Storm Center, InfoCON: green\n",
+      "Finished indexing documents for SANS Internet Storm Center, InfoCON: green. Total 2194 documents\n",
+      "Indexed 2194 documents\n",
+      "Computed similarities for 336 rows\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    # persist_documents()\n",
+    "    persist_documents()\n",
     "    \n",
     "    sq_conn = sqlite3.connect(\"reports.db\")\n",
     "    try:\n",
