Implement /v1/reports/enrich API to return enriched IOC data

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b7dc924e-d3c5-48b9-be3c-083ccda549cf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "94bd6c3b-291d-45e9-aa1a-edf965b8f895",
    "metadata": {},
    "outputs": [],
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "85dcb0ba-8e8d-4161-9413-1a74eca01be3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def copy_rows():\n",
+    "def copy_rows(copy_reports=True, copy_enriched_reports=True):\n",
     "    split = lambda s: s.split(\",\") if s else []\n",
     "    \n",
     "    pg_secret = get_pg_secret()\n",
@@ -66,68 +66,101 @@
     "        # First create the schema\n",
     "        pg_cur.execute(schema_f.read())\n",
     "        \n",
-    "        count = 0\n",
-    "        for row in sqlite_conn.execute(\"SELECT * FROM report\"):\n",
-    "            (report_id, publish_time, title, summary, upload_time,\n",
-    "             source, ipv4s, ipv6s, urls, yara_rules, cves,\n",
-    "             sha256s, md5s, sha1s, mitre, report_type,\n",
-    "             web_url, report_data_url, invalid_iocs, irrelevant_iocs, related_report_ids) = row\n",
-    "            \n",
-    "            pg_row = {\n",
-    "                \"id\": report_id,\n",
-    "                \"publish_time\": publish_time,\n",
-    "                \"title\": title,\n",
-    "                \"summary\": summary,\n",
-    "                \"upload_time\": upload_time,\n",
-    "                \"source\": source,\n",
-    "                \"ipv4s\": split(ipv4s),\n",
-    "                \"ipv6s\": split(ipv6s),\n",
-    "                \"urls\": split(urls),\n",
-    "                \"yara_rules\": json.loads(yara_rules),\n",
-    "                \"cves\": split(cves),\n",
-    "                \"sha256s\": split(sha256s),\n",
-    "                \"md5s\": split(md5s),\n",
-    "                \"sha1s\": split(sha1s),\n",
-    "                \"mitre\": mitre,\n",
-    "                \"report_type\": report_type,\n",
-    "                \"web_url\": web_url,\n",
-    "                \"report_data_url\": report_data_url,\n",
-    "                \"invalid_iocs\": json.dumps({}) if invalid_iocs == \"\" else invalid_iocs,\n",
-    "                \"irrelevant_iocs\": json.dumps({}) if irrelevant_iocs == \"\" else irrelevant_iocs,\n",
-    "                \"related_report_ids\": split(related_report_ids),\n",
-    "            }\n",
-    "            try:\n",
-    "                pg_cur.execute(\"\"\"\n",
-    "                    INSERT INTO report VALUES (\n",
-    "                        %(id)s,\n",
-    "                        to_timestamp(%(publish_time)s),\n",
-    "                        %(title)s,\n",
-    "                        %(summary)s,\n",
-    "                        to_timestamp(%(upload_time)s),\n",
-    "                        %(source)s,\n",
-    "                        %(ipv4s)s,\n",
-    "                        %(ipv6s)s,\n",
-    "                        %(urls)s,\n",
-    "                        %(yara_rules)s,\n",
-    "                        %(cves)s,\n",
-    "                        %(sha256s)s,\n",
-    "                        %(md5s)s,\n",
-    "                        %(sha1s)s,\n",
-    "                        %(mitre)s,\n",
-    "                        %(report_type)s,\n",
-    "                        %(web_url)s,\n",
-    "                        %(report_data_url)s,\n",
-    "                        %(invalid_iocs)s,\n",
-    "                        %(irrelevant_iocs)s,\n",
-    "                        %(related_report_ids)s\n",
-    "                    );\n",
-    "                \"\"\", pg_row)\n",
-    "            except Exception as e:\n",
-    "                raise Exception(f\"error inserting {report_id}: {e}\")\n",
+    "        if copy_reports:\n",
+    "            count = 0\n",
+    "            for row in sqlite_conn.execute(\"SELECT * FROM report\"):\n",
+    "                (report_id, publish_time, title, summary, upload_time,\n",
+    "                 source, ipv4s, ipv6s, urls, yara_rules, cves,\n",
+    "                 sha256s, md5s, sha1s, mitre, report_type,\n",
+    "                 web_url, report_data_url, invalid_iocs, irrelevant_iocs, related_report_ids) = row\n",
+    "                \n",
+    "                pg_row = {\n",
+    "                    \"id\": report_id,\n",
+    "                    \"publish_time\": publish_time,\n",
+    "                    \"title\": title,\n",
+    "                    \"summary\": summary,\n",
+    "                    \"upload_time\": upload_time,\n",
+    "                    \"source\": source,\n",
+    "                    \"ipv4s\": split(ipv4s),\n",
+    "                    \"ipv6s\": split(ipv6s),\n",
+    "                    \"urls\": split(urls),\n",
+    "                    \"yara_rules\": json.loads(yara_rules),\n",
+    "                    \"cves\": split(cves),\n",
+    "                    \"sha256s\": split(sha256s),\n",
+    "                    \"md5s\": split(md5s),\n",
+    "                    \"sha1s\": split(sha1s),\n",
+    "                    \"mitre\": mitre,\n",
+    "                    \"report_type\": report_type,\n",
+    "                    \"web_url\": web_url,\n",
+    "                    \"report_data_url\": report_data_url,\n",
+    "                    \"invalid_iocs\": json.dumps({}) if invalid_iocs == \"\" else invalid_iocs,\n",
+    "                    \"irrelevant_iocs\": json.dumps({}) if irrelevant_iocs == \"\" else irrelevant_iocs,\n",
+    "                    \"related_report_ids\": split(related_report_ids),\n",
+    "                }\n",
+    "                try:\n",
+    "                    pg_cur.execute(\"\"\"\n",
+    "                        INSERT INTO report VALUES (\n",
+    "                            %(id)s,\n",
+    "                            to_timestamp(%(publish_time)s),\n",
+    "                            %(title)s,\n",
+    "                            %(summary)s,\n",
+    "                            to_timestamp(%(upload_time)s),\n",
+    "                            %(source)s,\n",
+    "                            %(ipv4s)s,\n",
+    "                            %(ipv6s)s,\n",
+    "                            %(urls)s,\n",
+    "                            %(yara_rules)s,\n",
+    "                            %(cves)s,\n",
+    "                            %(sha256s)s,\n",
+    "                            %(md5s)s,\n",
+    "                            %(sha1s)s,\n",
+    "                            %(mitre)s,\n",
+    "                            %(report_type)s,\n",
+    "                            %(web_url)s,\n",
+    "                            %(report_data_url)s,\n",
+    "                            %(invalid_iocs)s,\n",
+    "                            %(irrelevant_iocs)s,\n",
+    "                            %(related_report_ids)s\n",
+    "                        );\n",
+    "                    \"\"\", pg_row)\n",
+    "                except Exception as e:\n",
+    "                    raise Exception(f\"error inserting {report_id}: {e}\")\n",
+    "    \n",
+    "                count += 1\n",
+    "    \n",
+    "            print(f\"Copied {count} reports\")\n",
     "\n",
-    "            count += 1\n",
+    "        if copy_enriched_reports:\n",
+    "            count = 0\n",
+    "            for row in sqlite_conn.execute(\"SELECT * FROM enriched_report\"):\n",
+    "                (report_id, cves, sha256s, md5s, sha1s, mitre) = row\n",
+    "    \n",
+    "                pg_row = {\n",
+    "                    \"report_id\": report_id,\n",
+    "                    \"cves\": cves,\n",
+    "                    \"sha256s\": sha256s,\n",
+    "                    \"md5s\": md5s,\n",
+    "                    \"sha1s\": sha1s,\n",
+    "                    \"mitre\": mitre\n",
+    "                }\n",
+    "    \n",
+    "                try:\n",
+    "                    pg_cur.execute(\"\"\"\n",
+    "                        INSERT INTO enriched_report VALUES (\n",
+    "                            %(report_id)s,\n",
+    "                            %(cves)s,\n",
+    "                            %(sha256s)s,\n",
+    "                            %(md5s)s,\n",
+    "                            %(sha1s)s,\n",
+    "                            %(mitre)s\n",
+    "                        );\n",
+    "                    \"\"\", pg_row)\n",
+    "                except Exception as e:\n",
+    "                    raise Exception(f\"error inserting {report_id}: {e}\")\n",
     "\n",
-    "        print(f\"Copied {count} rows\")\n",
+    "                count += 1\n",
+    "\n",
+    "            print(f\"Copied {count} enriched reports\")\n",
     "\n",
     "    pg_conn.close()\n",
     "    sqlite_conn.close()"
@@ -135,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "0a6422d6-c6dd-4c96-8713-e2d57ae1346c",
    "metadata": {},
    "outputs": [
@@ -143,13 +176,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied 336 rows\n"
+      "Copied 336 enriched reports\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    copy_rows()"
+    "    copy_rows(copy_reports=False, copy_enriched_reports=True)"
    ]
   }
  ],
