Add VT enrichment code

--- a/enrich_reports.ipynb
+++ b/enrich_reports.ipynb
@@ -10,14 +10,36 @@
     "from collections import defaultdict\n",
     "import json\n",
     "from mitreattack.stix20 import MitreAttackData\n",
+    "import nest_asyncio\n",
     "from ratelimit import limits, sleep_and_retry\n",
     "import sqlite3\n",
-    "import time"
+    "import time\n",
+    "import vt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ae7882cf-d953-4286-aeae-093f3d16a555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a9bb275c-547a-45e2-a27d-1bf96076d7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VT_API_KEY = \"<VT_API_KEY>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8b164bf1-5731-4f05-a83a-18e62ddfb98b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3f292f58-ef97-4cad-a8bb-09a05ed0ba48",
    "metadata": {},
    "outputs": [],
@@ -63,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "832b7e80-66d3-48a0-ab04-4ca3594d0c14",
    "metadata": {},
    "outputs": [],
@@ -79,7 +101,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "id": "ac54c2e1-45d1-4d57-9bdd-079e212f22c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@sleep_and_retry\n",
+    "@limits(calls=1, period=20) # VT restricts to 4 QPM\n",
+    "def enrich_vt(vt_client, filehashes):\n",
+    "    res = dict()\n",
+    "    for fh in filehashes:\n",
+    "        try:\n",
+    "            file = vt_client.get_object(f\"/files/{fh}\")\n",
+    "            res[fh] = f\"https://www.virustotal.com/gui/file/{fh}\"\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "d6af52f0-3b92-4573-a660-5e6c3367d968",
    "metadata": {},
    "outputs": [],
@@ -99,6 +142,8 @@
     "    read_cur = sq_conn.cursor()\n",
     "    update_cur = sq_conn.cursor()\n",
     "\n",
+    "    vt_client = vt.Client(apikey=VT_API_KEY)\n",
+    "\n",
     "    count = 0\n",
     "    for row in read_cur.execute(\"SELECT id, md5s, sha1s, sha256s, mitre FROM report\"):\n",
     "        report_id, md5s, sha1s, sha256s, mitre = row\n",
@@ -109,43 +154,61 @@
     "\n",
     "        enriched_mitre = enrich_mitre(mitre)\n",
     "\n",
+    "        enriched_md5s_vt = {}\n",
+    "        if len(md5s) > 0:\n",
+    "            enriched_md5s_vt = enrich_vt(vt_client, md5s)\n",
+    "\n",
+    "        enriched_sha1s_vt = {}\n",
+    "        if len(sha1s) > 0:\n",
+    "            enriched_sha1s_vt = enrich_vt(vt_client, sha1s)\n",
+    "\n",
+    "        enriched_sha256s_vt = {}\n",
+    "        if len(sha256s) > 0:\n",
+    "            enriched_sha256s_vt = enrich_vt(vt_client, sha256s)\n",
+    "\n",
+    "        enriched_md5s = {\"VirusTotal\": enriched_md5s_vt} if enriched_md5s_vt else {}\n",
+    "        enriched_sha1s = {\"VirusTotal\": enriched_sha1s_vt} if enriched_sha1s_vt else {}\n",
+    "        enriched_sha256s = {\"VirusTotal\": enriched_sha256s_vt} if enriched_sha256s_vt else {}\n",
+    "\n",
     "        data = {\n",
     "            \"report_id\": report_id,\n",
     "            \"mitre\": json.dumps(enriched_mitre),\n",
+    "            \"md5s\": json.dumps(enriched_md5s),\n",
+    "            \"sha1s\": json.dumps(enriched_sha1s),\n",
+    "            \"sha256s\": json.dumps(enriched_sha256s),\n",
     "        }\n",
     "\n",
     "        with sq_conn:\n",
     "            update_cur.execute(\"\"\"\n",
     "                INSERT OR REPLACE INTO enriched_report (\n",
     "                    report_id,\n",
-    "                    mitre\n",
+    "                    mitre,\n",
+    "                    md5s,\n",
+    "                    sha1s,\n",
+    "                    sha256s\n",
     "                ) VALUES(\n",
     "                    :report_id,\n",
-    "                    :mitre\n",
+    "                    :mitre,\n",
+    "                    :md5s,\n",
+    "                    :sha1s,\n",
+    "                    :sha256s\n",
     "                )\n",
     "            \"\"\", data)\n",
     "            if update_cur.rowcount != 1:\n",
     "                raise Exception(f\"error inserting enriched mitre for {report_id}. rowcount is {update_cur.rowcount}\")\n",
     "        \n",
     "        count += 1\n",
+    "        print(f\"Updated report {report_id} ({count})\")\n",
     "\n",
     "    print(f\"Updated {count} rows\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "11d73404-844c-47b6-895f-f8ca207a8a6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 336 rows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    # Connect to sqlite database\n",
